Added large directories to .gitignore and untracked heavy files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,16 @@ node_modules/
 .venv/
 __pycache__/
 node_modules/
+.terraform/
+.serverless/
+*.tfstate
+*.tfstate.backup
+*.zip
+*.log
+.cache/
+.vscode/
+.venv/
+__pycache__/
+node_modules/
+terraform/.terraform/
+terraform/.terraform/providers/
