Untrack build/provider files, keep terraform.tfvars, ensure clean repo

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,14 @@ __pycache__/
 node_modules/
 terraform/.terraform/
 terraform/.terraform/providers/
+.terraform/
+.serverless/
+*.tfstate
+*.tfstate.backup
+*.zip
+*.log
+.cache/
+.vscode/
+.venv/
+__pycache__/
+node_modules/
