--- a/.gitignore
+++ b/.gitignore
@@ -8,50 +8,4 @@
 .vscode/
 .venv/
 __pycache__/
-node_modules/
-.terraform/
-.serverless/
-*.tfstate
-*.tfstate.backup
-*.zip
-*.log
-.cache/
-.vscode/
-.venv/
-__pycache__/
-node_modules/
-.terraform/
-.serverless/
-*.tfstate
-*.tfstate.backup
-*.zip
-*.log
-.cache/
-.vscode/
-.venv/
-__pycache__/
-node_modules/
-.terraform/
-.serverless/
-*.tfstate
-*.tfstate.backup
-*.zip
-*.log
-.cache/
-.vscode/
-.venv/
-__pycache__/
-node_modules/
-terraform/.terraform/
-terraform/.terraform/providers/
-.terraform/
-.serverless/
-*.tfstate
-*.tfstate.backup
-*.zip
-*.log
-.cache/
-.vscode/
-.venv/
-__pycache__/
-node_modules/
+node_modules/terraform/terraform.tfvars
