Ignore Terraform provider binaries and large cache files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 .venv/
 __pycache__/
 node_modules/terraform/terraform.tfvars
+
+# Ignore large Terraform provider binaries
+terraform/.terraform/
+terraform/.terraform/providers/
