Removed local .history folder and ignored for future

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ node_modules/terraform/terraform.tfvars
 # Ignore large Terraform provider binaries
 terraform/.terraform/
 terraform/.terraform/providers/
+.history/
